--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 ---
 layout: home
-author_profile: false
+author_profile: true
 ---
+
+Welcome to Cloud Rebel, my own blog to document all my discoveries I do when exploring the world of coding and cloud computing.
+This gives me also the opportunity to blog about my other interests in life! :-)
