Changed Page Tags

--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@ author_profile: true
 ---
 
 Welcome to Cloud Rebel, my own blog to document all my discoveries I do when exploring the world of coding and cloud computing.
-This gives me also the opportunity to blog about my other interests in life! :-)
+This gives me also the opportunity to blog about my other interests in life as well! :-)
